feat: added auth by static api key

--- a/envs/docker/app.env.template
+++ b/envs/docker/app.env.template
@@ -1,5 +1,8 @@
+APP_CONFIG__API_KEY=xxx
+
 # db app postgres
 APP_CONFIG__DB__URL=postgresql+asyncpg://user:password@service_name:port/db_name
 APP_CONFIG__DB__ECHO=xxx
+
 
 
