--- a/envs/local/app.env.template
+++ b/envs/local/app.env.template
@@ -1,5 +1,8 @@
+APP_CONFIG__API_KEY=xxx
+
 # db app postgres
 APP_CONFIG__DB__URL=postgresql+asyncpg://user:password@localhost:port/db_name
 APP_CONFIG__DB__ECHO=xxx
+
 
 
